@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-07-25T08:30:50Z",
+  "timestamp" : "2022-07-25T16:32:27Z",
   "count_outdated" : 692,
   "uniques_outdated" : 359,
   "count" : 717,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
